fixed footer not showing problem

--- a/front/src/index.css
+++ b/front/src/index.css
@@ -23,7 +23,7 @@
 
 #app {
   font-family: 'Afacad', sans-serif;
-  overflow: hidden;
+  /* overflow: hidden; */
   width: 100%;
   height: 100%;
   min-width: 100%;
@@ -36,6 +36,6 @@ body {
   /* Make html and body take up the full height of the viewport */
   margin: 0;
   /* Remove default margin */
-  overflow: hidden;
+  /* overflow: hidden; */
   /* Keep your existing overflow rule */
 }
